# ZeroTrustServer

./: .gitignore  README.md  pyproject.toml  reset_data.sh
.github/workflows/: reset-data.yml
data/certificates/: ca_certificate.pem  ca_certificate.srl  ca_keygen.sh  ca_private_key.pem
data/client/files/: file2.json
data/client/users/: users.json
data/client/users/b0f31b084a0f48659f77eea15931ace3/: b0f31b084a0f48659f77eea15931ace3_cert.pem
data/client/users/b2e89ea6cdc34948b2c1c2e3f1188bbd/: b2e89ea6cdc34948b2c1c2e3f1188bbd_cert.pem
data/server/certificates/: server_cert.pem  server_key.pem
data/server/certificates/backup/: server_cert.pem  server_cert_config.cnf  server_key.pem
data/server/users/: keys.json
src/: client.py  client_tui.py  server.py  server_cert_rotation.py
src/utils/: certificates.py  req_utils.py  users.py  utils.py
tests/: test_users.py  test_utils.py
